--- a/internal/renderer/testdata/fixtures/test-kustomize/kustomization.yaml
+++ b/internal/renderer/testdata/fixtures/test-kustomize/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: override-namespace
 resources:
-- role.yaml
+  - role.yaml
+  - configuration/namespace.yaml
