--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+debug: false
+
 server:
   host: "0.0.0.0"
   port: 8080
@@ -9,7 +11,5 @@ database:
   port: 5432
   name: "rbac_ops"
   user: "postgres"
-  password: ""  # Set via environment variable RBAC_OPS_DATABASE_PASSWORD
+  password: "" # Set via environment variable RBAC_OPS_DATABASE_PASSWORD
   ssl_mode: "disable"
-
-
